# rag_agent

./: README.md  config.py  main copy.py  main.py  pyproject.toml
data/: remedy_data.json  remedy_guide.json
docs/: ingestion_inference.avif  retriever.avif
runtime/: test1  test3  test6
runtime/results/single_agent_logs/: test2  test4  test5  test7  test_INC654  test_INC654_RCA
