[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.3.23",
    "jq>=1.10.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchainhub>=0.1.21",
    "tiktoken>=0.12.0",
]
